--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+/* reset & font */
+@import url(./assets/font/Font.css);
+
 * {
     margin: 0;
     padding: 0;
@@ -9,4 +12,8 @@ li {
 a {
     text-decoration: none;
     color: inherit;
+}
+
+body {
+    font-family: "SD M";
 }
